--- a/main.html
+++ b/main.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testing Grounds</title>
+  <title>Multiplication Game</title>
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
   <div id="gamePanel">
-    
+    <h4>Multiplication Game</h4>
     <div id="display"><h1>Click "start game" to play.</h1></div>
     
     <div id="answers">
